# mechanopharm-infer

./: .gitignore  CHANGELOG.md  CITATION.cff  GLOSSARY.md  README.md  __init__.py  architecture_call.json  cli.py  demo_endpoint.csv  demo_timecourse.csv  plotting.py  preprocess.py  pyproject.toml  requirements.txt  streamlit_app.py  test_adapters.py  test_io.py  test_smoke.py  types.py
.pytest_cache/: nodeids
apps/: streamlit_app.py
benchmarks/: README.md  generate_synthetic.py  protected_state_endpoint_clean.csv  run_benchmark_suite.py  run_clean_benchmark.py
examples/: README.md  analysis_config.yaml  demo_endpoint.csv  demo_timecourse.csv  jem_like_endpoint.csv  kalli_like_endpoint.csv  minimal_matrix_template.csv  minimal_matrix_timecourse_template.csv  novak_like_endpoint.csv  quick_start.py  run_demo.py  settings.local.json
mechanopharm_infer/: __init__.py  cli.py  discriminate.py  fingerprints.py  io.py  plotting.py  preprocess.py  report.py  types.py
out4/: architecture_call.json  delayed_protection.csv  ec50_vs_m.csv  endpoint_qc.json  endpoint_summary.csv  final_response.csv  fingerprint_evidence.csv  mopt_vs_c.csv  peak_metrics.csv  report.txt  timecourse_qc.json
outputs_demo/: ec50_vs_m.csv  endpoint_summary.csv  final_response.csv  mopt_vs_c.csv  peak_metrics.csv  report.txt
src/: __init__.py  fingerprints.py
src/mechanopharm_infer/: io.py  (+12 more)
tests/: test_bootstrap.py  test_diagnostics.py  test_discriminate.py  test_fingerprints.py  test_io.py  test_plotting_and_benchmarks.py  test_preprocess.py  test_schema.py  test_smoke.py  test_synthetic.py
(+23 files in other folders)
